Changes for Padre-Plugin-YAML

0.01    2011.06.24
	First version, released on an unsuspecting world.
	- Only feature: toggle comments