@@ -1,17 +1,0 @@
-name             = Padre-Plugin-YAML
-author           = Zeno Gantner <zenog@cpan.org>
-license          = Perl_5
-version          = 0.01
-copyright_holder = Zeno Gantner
-
-[@PadrePlugin]
-
-homepage         = http://padre.perlide.org
-repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-YAML/
-
-[Prereqs]
-Padre            = 0.85
-
-[TestRelease]
-[ConfirmRelease]
-
